--- a/style.css
+++ b/style.css
@@ -1,1 +1,29 @@
+            .menu_bar ul {
+                display: inline;
+                list-style-type: none;
+            }
 
+            .navcontainer ul {
+                margin: 0;
+                padding: 0;
+                list-style-type: none;
+                text-align: center;
+            }
+
+            .navcontainer ul li { 
+                display: inline; 
+            }
+
+            .navcontainer ul li a {
+                text-decoration: none;
+                font-family: Helvetica;
+                font-size: 20px;
+                padding: .2em 1em;
+                color: #fff;
+                background-color:rgba(0,0,0,0.45);
+            }
+
+            .navcontainer ul li a:hover {
+                color: #fff;
+                background-color:rgba(2,73,166,0.5);
+            }
