--- a/style.css
+++ b/style.css
@@ -27,3 +27,7 @@
                 color: #fff;
                 background-color:rgba(2,73,166,0.5);
             }
+            .header {
+                        
+            }
+            .b
