--- a/style.css
+++ b/style.css
@@ -1,3 +1,11 @@
+           
+            body { 
+                background-image: url('http://www.uksoftech.com/wp-content/uploads/2016/02/website-design-background.png');
+                background-repeat: no-repeat;
+                background-attachment: fixed;
+                background-size: cover;
+            }
+
             .menu_bar ul {
                 display: inline;
                 list-style-type: none;
