--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
            
             body { 
-                background-image: url('http://www.uksoftech.com/wp-content/uploads/2016/02/website-design-background.png');
+                background-image: url('http://feelgrafix.com/data/background/background-2.jpg');
                 background-repeat: no-repeat;
                 background-attachment: fixed;
                 background-size: cover;
