--- a/style.css
+++ b/style.css
@@ -28,8 +28,8 @@
 
             .navcontainer ul li a {
                 text-decoration: none;
-                font-family: Helvetica;
-                font-size: 20px;
+                font-family: Timew New Roman;
+                font-size: 30px;
                 padding: .2em 1em;
                 color: #fff;
                 background-color:rgba(0,0,0,0.25);
