--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@
 
             .navcontainer ul li a {
                 text-decoration: none;
-                font-family: Timew New Roman;
+                font-family: Times New Roman;
                 font-size: 30px;
                 padding: .2em 1em;
                 color: #fff;
