--- a/style.css
+++ b/style.css
@@ -1,41 +1,47 @@
            
-            body { 
-                background-image: url('http://www.uksoftech.com/wp-content/uploads/2016/02/website-design-background.png');
-                background-repeat: no-repeat;
-                background-attachment: fixed;
-                background-size: cover;
-            }
+           body { 
+               background-image: url('http://www.uksoftech.com/wp-content/uploads/2016/02/website-design-background.png');
+               background-repeat: no-repeat;
+               background-attachment: fixed;
+               background-size: cover;
+           }
 
-            .header {
+           .header {
                        
-            }
+           }
 
-            .menu_bar ul {
-                display: inline;
-                list-style-type: none;
-            }
+           .body  {
+               background-color:rgba(0,0,0,0.45);
+               margin: auto;
+               width: 750px;
+           }
 
-            .navcontainer ul {
-                margin: 0;
-                padding: 0;
-                list-style-type: none;
-                text-align: center;
-            }
+           .menu_bar ul {
+               display: inline;
+               list-style-type: none;
+           }
 
-            .navcontainer ul li { 
-                display: inline; 
-            }
+           .navcontainer ul {
+               margin: 0;
+               padding: 0;
+               list-style-type: none;
+               text-align: center;
+           }
 
-            .navcontainer ul li a {
-                text-decoration: none;
-                font-family: Times New Roman;
-                font-size: 30px;
-                padding: .2em 1em;
-                color: #fff;
-                background-color:rgba(0,0,0,0.25);
-            }
+           .navcontainer ul li { 
+               display: inline; 
+           }
 
-            .navcontainer ul li a:hover {
-                color: #fff;
-                background-color:rgba(2,73,166,0.25);
-            }
+           .navcontainer ul li a {
+               text-decoration: none;
+               font-family: Times New Roman;
+               font-size: 30px;
+               padding: .2em 1em;
+               color: #fff;
+               background-color:rgba(0,0,0,0.25);
+           }
+
+           .navcontainer ul li a:hover {
+               color: #fff;
+               background-color:rgba(2,73,166,0.25);
+           }
